--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     
-    <title>React App</title>
+    <title>Text Utility</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
